--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,14 @@ li:first-letter {
   text-transform: capitalize;
 }
 
+a {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -67,4 +75,9 @@ li:first-letter {
 
 .float-left {
   float: left;
+}
+
+.active {
+  color: rgb(33, 33, 33);
+  cursor: default;
 }
