--- a/src/style.css
+++ b/src/style.css
@@ -81,3 +81,22 @@ a:hover {
   color: rgb(33, 33, 33);
   cursor: default;
 }
+
+.forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: rgb(33, 33, 33);
+}
+
+.forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.forecast-temperature {
+  font-size: 13px;
+}
+
+.forecast-min {
+  opacity: 0.5;
+}
